# INOFIT-PIPELINE

./: .gitattributes  .gitignore  .run_sj.sh.swn  README.md  geodesic.txt  obj2off.py  off2obj.py  off2stl.py  rear_indices.txt  rear_indices_high_resolution.txt  rear_indices_subdiv.txt
enhancing/: denoise.py  reader.py  record_translation.py
eval/: eval_two_mesh  evaluate.py  res  result_trimmed.off  rotate.py  rotation.txt  util.py
eval/GT_mesh/DD_1/: DD_1.off
eval/GT_mesh/NL_119/: NL_119.off
eval/GT_mesh/UQ_132/: UQ_132.off
eval/asdf/: result.off  rotation.txt
landmark_placement_mvlm/: evaluate.py  mypreparedata.py  predict.py  predictOBJ.py  requirements.txt  rotate.py  yaml_to_txt.py
landmark_placement_mvlm/configs/: BU_3DFE-geometry.json  CTMASK-geometry.json  DTU3D-RGB.json
landmark_placement_mvlm/deepmvlm/: api.py
landmark_placement_mvlm/prediction/: predict2d.py
landmark_placement_mvlm/saved/models/MVLMModel_CTMASK/150622_165519/: config.json
landmark_placement_mvlm/saved/trained/: model_best1015.pth  model_best_H.pth
landmark_placement_mvlm/utils3d/: render3d.py  utils3d.py
marching_cubes/: dcmIO.py  find_nose.py  prerotate_scanner.py  readObj.py  remesh_scanner.py  run.py  save_obj.py
mesh_alignment/: align.py  color_transfer.py  reindexing.py  rigid_transformation.py  rigid_transformationPCA.py  rigid_transformationPCAAfter.py  rigid_transformationPCAFinal.py  rigid_transformationTemp.py  rigid_transformation_subdiv.py  run.py  scanner_offset.txt  targetToPCA_E_final.yaml  template (hr).yaml  template-ControlPoints.json  template.yaml  templatePCA.off  templatePCA.yaml  templatePCAWide.off  template_left.off  template_right.off  template_subdiv.off  template_subdiv.yaml  yaml_to_txt.py
pca/: .gitignore  CMakeLists.txt  README.md
pca/include/: cuda_solver.hpp  cuda_solver_internal.hpp  data_driven_nonrigid_icp.hpp  eigen_tools.hpp  mesh_alignment_3rd_party.hpp  mesh_correspondence.hpp  mesh_distortion.hpp  mesh_pca.hpp  mesh_tools.hpp  parameter_reader.hpp  region_pca_manager.hpp  region_tools.hpp  target_manager.hpp  template_manager.hpp  tools.hpp
pca/mesh/mesh_extreme/: target2_manually_aligned.off  target2_original_aligned.off  target_manually_aligned.off
pca/mesh/mesh_set_3/color_reference/: color_reference.off  color_reference2.off  color_reference3.off  color_reference4.off
pca/mesh/validation_set/: D_cmm_test.off
pca/params/preprocess/: A.json  B.json  B2.json  B3.json  C2.json  E.json
pca/params/registration/: A.json  B.json  B2.json  B3.json  C2.json  D.json  E.json
pca/src/app/: convert_all_obj_to_off.cpp  nose_tip_align.cpp  preprocess.cpp  registration.cpp  transfer_color_to_all_off.cpp
pca/src/lib/: cuda_solver.cpp  cuda_solver_internal.cu  data_driven_nonrigid_icp.cpp  eigen_tools.cpp  mesh_alignment_3rd_party.cpp  mesh_correspondence.cpp  mesh_distortion.cpp  mesh_pca.cpp  mesh_tools.cpp  parameter_reader.cpp  region_pca_manager.cpp  region_tools.cpp  target_manager.cpp  template_manager.cpp  tools.cpp
pca/src/test/: compute_pca_on_meshes.cpp  convert_stl_obj_to_off.cpp  find_closest_point.cpp  find_correspondence.cpp  generate_distorted_mesh.cpp  merge_regions.cpp  read_regions.cpp  remove_regions.cpp  test_3rd_party_mesh_alignment.cpp  test_cusolver.cpp  test_pca_transpose_trick.cpp  test_viennacl.cpp  test_widen_region.cpp
pca/template/matrix/: E_M.txt  E_stiffness.txt
pca/template/mesh/: E_cmm.off
pca/template/region/: E_rvm.txt
skin_segmentation/: interpolation.py  requirements.txt
skin_segmentation/pytorch3dunet/: predict.py  predict_seg.py
skin_segmentation/pytorch3dunet.egg-info/: PKG-INFO  SOURCES.txt
skin_segmentation/pytorch3dunet/3dunet/: 0828.pytorch  1128.pytorch  1218ac200.pytorch  1218dice.pytorch  1222dice.pytorch  1223ac1000.pytorch  1224ac10000.pytorch  1228ac50exy.pytorch  1231ac50exxy.pytorch  H_airway.pytorch  H_airway_last.pytorch  H_bone.pytorch  H_union_10000.pytorch  H_union_50.pytorch
skin_segmentation/pytorch3dunet/datasets/: utils.py
skin_segmentation/pytorch3dunet/unet3d/: losses.py  predictor_seg.py  utils.py
skin_segmentation/resources/: promedius_H.yaml  promedius_all.yaml  test_H_50.yaml  test_config_ac.yaml  test_config_airway.yaml  test_config_bone.yaml  train_config_ac.yaml
template_mesh/: ..main.cpp  .main.cpp  Makefile  NonrigidICP.cpp  README.md  gpu_solve.cu  gpu_solve.h  main.cpp  main_back.cpp  main_bak.cpp  main_bak2.cpp  main_bak4_success.cpp  main_bak5.cpp  main_bak6.cpp
template_mesh_cl/: clip_face  coordinate2index  extract_region  index2coordinate  merge.py  right_indices.txt  template-ControlPoints_high_resolution.json  template-ControlPoints_high_resolution.txt  template-ControlPoints_high_resolution.yaml  template_standard  template_testing  test_0603  test_backup  test_cropped3  test_cropped4  test_nose_line  test_preserve_rear  test_preserve_rear_high_resolution  test_preserve_rear_high_resolution2  test_preserve_rear_high_resolution3  test_preserve_rear_repair  test_subdiv  test_subdiv_cpu  trim_by_distance  trim_by_distance_with_room1  trim_by_distance_with_room2  trim_by_distance_with_room3  trim_ct  trim_ct1  trim_ct2  trim_ct3  trim_ct4  trim_predefined_region  trim_predefined_region1  trim_region_distance  trim_region_distance2  trim_scanner
texture/: Untitled.ipynb  brightness.py  main.py  mainPCA.py  main_temp.py  objIO.py  register.py  test2.py
texture/.ipynb_checkpoints/: test2-checkpoint.py
utils/: unstableZipFile.py
